--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,7 @@ h3 {
 
 .landing {
 	background: url(../images/Nammos_Landing.jpg) 50% 0 no-repeat; 
+	background-size: 100%;
 	height: 100vh;  
 	margin: 0 auto; 
     width: 100%; 
