--- a/css/general.css
+++ b/css/general.css
@@ -34,7 +34,7 @@ h3 {
 
 .landing {
 	background: url(../images/Nammos_Landing.jpg) 50% 0 no-repeat; 
-	background-size: 100%;
+	/*background-size: 100%;*/
 	height: 100vh;  
 	margin: 0 auto; 
     width: 100%; 
@@ -216,7 +216,18 @@ footer {
 }
 
 
-
+.landing {
+	background: url(../images/Nammos_Landing.jpg) 50% 0 no-repeat; 
+	background-size: 100%;
+	height: 100vh;  
+	margin: 0 auto; 
+    width: 100%; 
+    max-width: 1920px; 
+    position: relative; 
+   	z-index: 1;
+   	overflow: hidden;
+   	padding-top: 0px;
+	}
 
  }
 
