--- a/css/general.css
+++ b/css/general.css
@@ -239,7 +239,7 @@ footer {
 	height: 100vh;  
 	margin: 0 auto; 
     width: 100vw; 
-    max-width: 1920px; 
+    /*max-width: 1920px; */
     position: relative; 
    	z-index: 1;
    	overflow: hidden;
