--- a/css/general.css
+++ b/css/general.css
@@ -250,6 +250,24 @@ footer {
 }
 
 
+
+ @media only screen and (min-width: 1300px ) {
+
+.logo {
+	background-image: url(../images/logo.svg);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	width: 310px;
+	height: 310px;
+	margin: 100px auto 40px;
+
+}
+
+}
+
+
+
+
  @media only screen and (min-width: 1500px ) {
 
 .landing {
