--- a/css/general.css
+++ b/css/general.css
@@ -290,6 +290,21 @@ footer {
 
 
 
+ @media only screen and (min-width: 1600px ) {
+
+
+.logo {
+	background-image: url(../images/logo.svg);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	width: 420px;
+	height: 420px;
+	margin: 70px auto 40px;
+
+}
+
+}
+
 
 
 
