--- a/css/general.css
+++ b/css/general.css
@@ -115,7 +115,7 @@ footer p {
 
 
 .scroll {
-	background-image: url(../images/scroll.svg);
+	/*background-image: url(../images/scroll.svg);*/
 	width: 50px;
 	height: 50px;
 	background-size: 100%;
