--- a/css/general.css
+++ b/css/general.css
@@ -247,13 +247,13 @@ footer {
 	}
 
 .landing-type {
-	width: 60%;
+	width: 70%;
 	margin: 20px auto;
 	text-align: center;
 	line-height: 3em;
 }
 .landing-subheader {
-	width: 60%;
+	width: 70%;
 	margin: 0px auto;
 }
 
@@ -266,7 +266,7 @@ footer {
 
 
 .landing-type {
-	width: 50%;
+	width: 70%;
 	margin: 50px auto;
 	text-align: center;
 	line-height: 3em;
@@ -308,6 +308,17 @@ footer {
 
 }
 
+.landing-type {
+	width: 50%;
+	margin: 50px auto;
+	text-align: center;
+	line-height: 3em;
+}
+
+.landing-subheader {
+	width: 60%;
+	margin: 20px auto;
+}
 
 
  }
@@ -325,6 +336,17 @@ footer {
 	height: 420px;
 	margin: 70px auto 40px;
 
+}
+.landing-type {
+	width: 50%;
+	margin: 50px auto;
+	text-align: center;
+	line-height: 3em;
+}
+
+.landing-subheader {
+	width: 60%;
+	margin: 20px auto;
 }
 
 }
