--- a/css/grid.css
+++ b/css/grid.css
@@ -5,6 +5,7 @@
 	*letter-spacing: normal;
  	*word-spacing: -0.43em;
 	text-rendering: optimizespeed;
+
 }
 
 .opera-only :-o-prefocus, .grid {
@@ -17,13 +18,13 @@
 
 .unit {
 	display: inline-block;
-	margin: 0 auto;
+	margin: 0;
 	zoom: 1;
 	letter-spacing: normal;
 	text-rendering: auto;
 	vertical-align: top;
 	word-spacing: normal;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
 }
 
 .unit-spacer {
@@ -39,7 +40,7 @@
 }
 
 
- @media only screen and (max-width: 45em ) {
+ @media only screen and (max-width: 36em ) {
 
 .unit-s-hidden {
 	display: none;
@@ -48,7 +49,16 @@
 .unit-s-1 {
 	display: block;
 	text-align: center;
+	width: 100%;
 }
+/*NammosMenu-Small*/
+.unit-sm-1 {
+	display: block;
+	text-align: left;
+	width: 100%;
+}
+
+
 .unit-s-1-2 {
 	width: 50%;
 }
@@ -75,7 +85,7 @@
 }
 
 
-@media only screen and (min-width: 38em) and (max-width: 60em) {
+@media only screen and (min-width: 36em) and (max-width: 60em) {
 
 .unit-m-hidden {
 	display: none;
@@ -85,6 +95,11 @@
 .unit-m-1 {
 	width: 98%;
 	text-align: center;
+}
+
+.unit-mm-1 {
+	width: 98%;
+	text-align: left;
 }
 
 .unit-m-1-2 {
@@ -126,13 +141,18 @@ unit-x-1 {
 .unit-l-1 {
 	width: 98%;
 }
+
+.unit-lm-1 {
+	width: 98%;
+}
+
 .unit-l-1-2 {
 	width: 50%;
 }
 .p-unit-l-1-3 {
 	width: 31.3333%;
 	text-align: center;
-	margin:1%;
+	/*margin:1%;*/
 }
 .unit-l-1-3 {
 	width: 33.3333%;
