--- a/css/general.css
+++ b/css/general.css
@@ -46,7 +46,7 @@ background-color: #191919;
 .landing-logo {
 	width: 300px;
 	height: 300px;
-	margin: 20px auto;
+	margin: 20px auto -40px;
 	z-index: 0;
 	background-image: url(../images/landing-logo.svg);
 	background-repeat: no-repeat;
