--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
 
 .menu-landing {
 	width: 100%;
-	height: 47vh;
+	height: 57vh;
 	/*background-color: #f3f3f3;*/
 	background: url(../images/imgback4.jpg) 20% 0 no-repeat fixed;
 	position: inherit;
@@ -192,6 +192,21 @@ li {
 	width: 80%;
 	margin: 0 auto 30px;
 }
+
+
+
+.menu-landing {
+	width: 100%;
+	height: 47vh;
+	/*background-color: #f3f3f3;*/
+	background: url(../images/imgback4.jpg) 20% 0 no-repeat fixed;
+	position: inherit;
+	/*background-size: 100%;*/
+	background-repeat: no-repeat;
+	padding-top: 100px;
+	text-align: center;
+}
+
 
 
 }
